poc/tests/errors/test_FplVariableAlreadyDeclared_proof_01.fpl
TestNamespcase
{
    theory
    {
        proof Test$1
        {
            x: Nat
            x: Nat
            1. |- trivial
        }
    }
}
##############################

FplVariableAlreadyDeclared:8:13: The name 'x' was already declared in the current context at (7,13)